--- a/frontend/src/components/Login.css
+++ b/frontend/src/components/Login.css
@@ -31,6 +31,13 @@
     margin:30px 0
 }
 
+.Form .input_signup {
+    position:relative;
+    width:100%;
+    height:30px;
+    margin:30px 0
+}
+
 .input input {
     width:100%;
     height:100%;
@@ -41,6 +48,18 @@
     font-size:16px ;
     color:#000;
     padding:20px 45px 20px 20px
+}
+
+.input_signup input {
+    width:100%;
+    height:100%;
+    background: transparent;
+    outline:none;
+    border:2px solid rgba(80, 147, 123, 0.442);
+    border-radius: 40px;
+    font-size:16px ;
+    color:#000;
+    /* padding:20px 45px 20px 20px */
 }
 
 .input input::placeholder{
